# mario-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  index_inline.html  index_itchio.html  package-lock.json  package.json  playwright.config.ts  skills-lock.json
.github/workflows/: deploy.yml  test.yml
src/: game.rs  input.rs  lib.rs  player.rs  renderer.rs  sim.rs  world.rs
src/tests/: enemies.rs  game.rs  html.rs  mod.rs  player.rs  world.rs
tests/: game.spec.ts
