[package]
name = "mario-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlElement",
  "Element",
  "EventTarget",
  "CanvasRenderingContext2d",
  "KeyboardEvent",
  "Performance",
  "TouchEvent",
  "Touch",
  "TouchList",
  "DomRect",
  "Event",
]

[profile.release]
opt-level = "s"
lto = true
